# local-data-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  plugin_loader.py  security.py  services_registry.py  sql_guard.py
backend/app/clients/: dagster_client.py  pipelines_client.py  search_client.py  trino_client.py
backend/app/routers/: chat.py  dagster.py  health.py  search.py  services.py  trino.py
backend/tests/: test_plugin_loader.py  test_security.py  test_sql_guard.py
docker/: docker-compose.ai.gpu.yml  docker-compose.ai.yml  docker-compose.app.yml  docker-compose.bi.yml  docker-compose.dagster.yml  docker-compose.docs.yml  docker-compose.observability.yml  docker-compose.yml
docs/: architecture.md  scale-out-k3s.md
examples/: README.md
examples/dagster_project/: Dockerfile  dagster.yaml  pyproject.toml  setup.py  workspace.yaml
examples/dagster_project/local_data_platform/: definitions.py
examples/dagster_project/local_data_platform/assets/: __init__.py  dbt_assets.py  dbt_docs_embeddings.py  embeddings.py
examples/dagster_project/local_data_platform/assets/raw/: __init__.py  landing.py
examples/dagster_project/local_data_platform/jobs/: __init__.py  land_raw_events_job.py
examples/dagster_project/local_data_platform/resources/: __init__.py  dbt_resource.py  minio_resource.py  ollama_resource.py  qdrant_resource.py  trino_resource.py
examples/dagster_project/local_data_platform/sensors/: __init__.py  redpanda_landing_sensor.py
(+75 files in other folders)
